test/fail/optargs/optarg_before_normal.lly
#[
SyntaxError: Cannot have normal arguments after optional arguments.
    from optarg_before_normal.lly:6
]#

define f(a: *integer=10, b: integer) {  }
